--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,12 +1,7 @@
 <p>
-    Please add a text describing the font here, 100 chracters or more, but no more than 500 words.
-    See https://googlefonts.github.io/gf-guide/description.html for further reference.
-    Please make sure that HTML characters are properly encoded. ('&' becomes &amp; etc.)
-    If unsure, use https://www.freeformatter.com/html-escape.html for formatting. (Use "Escape HTML").
+    Sankofa Display is a captivating African typeface that draws inspiration from a rich tapestry of African art styles, with a particular focus on straight-line geometric designs. This typeface embodies the essence of Africa's diverse cultural heritage, blending elements from various artistic traditions.
 </p>
+
 <p>
-    Could be several paragraphs, also.
-</p>
-<p>
-    To contribute, see <a href="https://github.com/youruseraccount/yourrepository">github.com/youruseraccount/yourrepository</a>.
+    To contribute, see <a href="https://github.com/batsimadz/Sankofa-Display-Project">github.com/batsimadz/Sankofa-Display-Project</a>.
 </p>
