--- a/scripts/index.html
+++ b/scripts/index.html
@@ -6,14 +6,7 @@
 		<title>My Font development</title>
 	</head>
 	<body>
-		<h1>My Font testing pages</h1>
-		<ul>
-			<li>
-				<a href="fontbakery/fontbakery-report.html">FontBakery Report</a>
-			</li>
-			<li>
-				<a href="proof/diffenator2-report.html">Diffenator2 Report</a>
-			</li>
-		</ul>
+		<h1>Sankofa Display</h1>
+
 	</body>
 </html>
