--- a/scripts/index.html
+++ b/scripts/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>My Font development</title>
+		<title>Sankofa Display</title>
 	</head>
 	<body>
 		<h1>Sankofa Display</h1>
