--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	</head>
 	<body>
 		<h1>Sankofa Display</h1>
-
+<ul>
+			<li>
+				<a href="fontbakery/fontbakery-report.html">FontBakery Report</a>
+			</li>
+			<li>
+				<a href="proof/diffenator2-report.html">Diffenator2 Report</a>
+			</li>
+		</ul>
 	</body>
 </html>
