--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -131,19 +131,19 @@ ul {
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td>14</td>
+                <td>12</td>
                 <td>123</td>
                 <td>7</td>
-                <td>112</td>
+                <td>114</td>
             </tr>
             <tr>
                 <td>0%</td>
                 <td>0%</td>
                 <td>0%</td>
-                <td>7%</td>
+                <td>6%</td>
                 <td>65%</td>
                 <td>4%</td>
-                <td>59%</td>
+                <td>60%</td>
             </tr>
             </table>
             
@@ -171,7 +171,7 @@ ul {
     <p>FontBakery version: 0.10.9</p>
     
 <h2>Section: Google Fonts</h2>
-<span class='section__emoji'>⚠️⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</span>
+<span class='section__emoji'>⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</span>
 <h3>Checking OS/2 achVendID.</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/vendor_id</div>
 
@@ -194,7 +194,7 @@ definitions.</p>
 <li>U+02BE MODIFIER LETTER RIGHT HALF RING: not included in any glyphset definition</li>
 <li>U+02BF MODIFIER LETTER LEFT HALF RING: not included in any glyphset definition</li>
 <li>U+02C0 MODIFIER LETTER GLOTTAL STOP: not included in any glyphset definition</li>
-<li>U+02C7 CARON: try adding one of: yi, canadian-aboriginal, tifinagh</li>
+<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
 <li>U+02C8 MODIFIER LETTER VERTICAL LINE: not included in any glyphset definition</li>
 <li>U+02CA MODIFIER LETTER ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+02CB MODIFIER LETTER GRAVE ACCENT: not included in any glyphset definition</li>
@@ -204,12 +204,12 @@ definitions.</p>
 <li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+02EE MODIFIER LETTER DOUBLE APOSTROPHE: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, math, tifinagh, coptic</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: tifinagh, cherokee, math, coptic</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: malayalam, old-permic, tifinagh, syriac, canadian-aboriginal, math, tai-le, coptic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, coptic, canadian-aboriginal, old-permic, malayalam, syriac, math</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
-<li>U+030C COMBINING CARON: try adding one of: cherokee, tai-le</li>
+<li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
 <li>U+030D COMBINING VERTICAL LINE ABOVE: not included in any glyphset definition</li>
 <li>U+030F COMBINING DOUBLE GRAVE ACCENT: not included in any glyphset definition</li>
 <li>U+0310 COMBINING CANDRABINDU: not included in any glyphset definition</li>
@@ -224,16 +224,16 @@ definitions.</p>
 <li>U+0328 COMBINING OGONEK: not included in any glyphset definition</li>
 <li>U+032D COMBINING CIRCUMFLEX ACCENT BELOW: try adding syriac</li>
 <li>U+032F COMBINING INVERTED BREVE BELOW: not included in any glyphset definition</li>
-<li>U+0330 COMBINING TILDE BELOW: try adding one of: cherokee, math, syriac</li>
-<li>U+0331 COMBINING MACRON BELOW: try adding one of: tifinagh, syriac, gothic, caucasian-albanian, cherokee</li>
+<li>U+0330 COMBINING TILDE BELOW: try adding one of: syriac, cherokee, math</li>
+<li>U+0331 COMBINING MACRON BELOW: try adding one of: tifinagh, gothic, cherokee, syriac, caucasian-albanian</li>
 <li>U+0332 COMBINING LOW LINE: not included in any glyphset definition</li>
 <li>U+0334 COMBINING TILDE OVERLAY: not included in any glyphset definition</li>
 <li>U+0335 COMBINING SHORT STROKE OVERLAY: not included in any glyphset definition</li>
 <li>U+0358 COMBINING DOT ABOVE RIGHT: try adding osage</li>
-<li>U+03A9 GREEK CAPITAL LETTER OMEGA: try adding one of: greek, math, elbasan</li>
-<li>U+03BB GREEK SMALL LETTER LAMDA: try adding one of: greek, math</li>
-<li>U+03C0 GREEK SMALL LETTER PI: try adding one of: yi, greek, math</li>
-<li>U+03C7 GREEK SMALL LETTER CHI: try adding one of: greek, math</li>
+<li>U+03A9 GREEK CAPITAL LETTER OMEGA: try adding one of: math, greek, elbasan</li>
+<li>U+03BB GREEK SMALL LETTER LAMDA: try adding one of: math, greek</li>
+<li>U+03C0 GREEK SMALL LETTER PI: try adding one of: yi, math, greek</li>
+<li>U+03C7 GREEK SMALL LETTER CHI: try adding one of: math, greek</li>
 <li>U+0E3F THAI CURRENCY SYMBOL BAHT: try adding thai</li>
 <li>U+1D58 MODIFIER LETTER SMALL U: not included in any glyphset definition</li>
 <li>U+1D5B MODIFIER LETTER SMALL V: not included in any glyphset definition</li>
@@ -276,12 +276,12 @@ definitions.</p>
 <li>U+215E VULGAR FRACTION SEVEN EIGHTHS: not included in any glyphset definition</li>
 <li>U+2190 LEFTWARDS ARROW: try adding one of: symbols, math</li>
 <li>U+2192 RIGHTWARDS ARROW: try adding one of: symbols, math</li>
-<li>U+2194 LEFT RIGHT ARROW: try adding one of: symbols, math, emoji</li>
-<li>U+2195 UP DOWN ARROW: try adding one of: symbols, math, emoji</li>
-<li>U+2196 NORTH WEST ARROW: try adding one of: symbols, math, emoji</li>
-<li>U+2197 NORTH EAST ARROW: try adding one of: symbols, math, emoji</li>
-<li>U+2198 SOUTH EAST ARROW: try adding one of: symbols, math, emoji</li>
-<li>U+2199 SOUTH WEST ARROW: try adding one of: symbols, math, emoji</li>
+<li>U+2194 LEFT RIGHT ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2195 UP DOWN ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2196 NORTH WEST ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2197 NORTH EAST ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2198 SOUTH EAST ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2199 SOUTH WEST ARROW: try adding one of: symbols, emoji, math</li>
 <li>U+2202 PARTIAL DIFFERENTIAL: try adding math</li>
 <li>U+2205 EMPTY SET: try adding math</li>
 <li>U+2206 INCREMENT: try adding math</li>
@@ -318,7 +318,7 @@ definitions.</p>
 <li>U+25C7 WHITE DIAMOND: try adding symbols</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
 <li>U+25CB WHITE CIRCLE: try adding symbols</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: buhid, manichaean, sundanese, modi, hanifi-rohingya, javanese, khmer, cham, tifinagh, tirhuta, takri, thai, phags-pa, kayah-li, tai-viet, nko, soyombo, tamil, kaithi, gurmukhi, hebrew, sharada, wancho, tai-le, thaana, lepcha, psalter-pahlavi, khojki, ahom, batak, newa, music, zanabazar-square, oriya, osage, myanmar, adlam, kannada, pahawh-hmong, mende-kikakui, sinhala, khudawadi, chakma, yi, sogdian, math, brahmi, gunjala-gondi, bhaiksuki, devanagari, kharoshthi, masaram-gondi, buginese, dogra, mongolian, syriac, syloti-nagri, bassa-vah, coptic, siddham, malayalam, mandaic, old-permic, new-tai-lue, tagbanwa, symbols, gujarati, bengali, lao, marchen, miao, duployan, hanunoo, mahajani, caucasian-albanian, balinese, telugu, meetei-mayek, tibetan, grantha, elbasan, tagalog, rejang, limbu</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: khudawadi, manichaean, batak, zanabazar-square, balinese, malayalam, sharada, thaana, hanunoo, lao, tifinagh, grantha, newa, psalter-pahlavi, thai, syriac, sinhala, old-permic, osage, hebrew, javanese, miao, oriya, bengali, tai-viet, takri, adlam, cham, buhid, kayah-li, symbols, bassa-vah, limbu, bhaiksuki, myanmar, lepcha, nko, tai-le, mende-kikakui, khojki, coptic, mandaic, mongolian, ahom, dogra, music, duployan, khmer, gunjala-gondi, tagalog, modi, kannada, phags-pa, tirhuta, syloti-nagri, chakma, buginese, marchen, meetei-mayek, masaram-gondi, tagbanwa, sundanese, telugu, brahmi, hanifi-rohingya, siddham, devanagari, tamil, gujarati, new-tai-lue, rejang, gurmukhi, soyombo, mahajani, kharoshthi, wancho, caucasian-albanian, math, yi, pahawh-hmong, elbasan, sogdian, tibetan, kaithi</li>
 <li>U+25CF BLACK CIRCLE: try adding symbols</li>
 <li>U+25E6 WHITE BULLET: try adding symbols</li>
 <li>U+27E8 MATHEMATICAL LEFT ANGLE BRACKET: try adding math</li>
@@ -329,11 +329,6 @@ definitions.</p>
 <li>U+1FA9D HOOK: try adding one of: symbols, emoji</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>cyrillic-ext</code>, <code>latin</code>, <code>latin-ext</code>, <code>vietnamese</code> [code: unreachable-subsetting]</p>
-</span></li></ul></div></details>
-<h3>License URL matches License text on name table?</h3>
-<div class='check__idlabel'>Check ID: com.google.fonts/check/name/license_url</div>
-
-<details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>OFL url is no longer &quot;<a href="https://scripts.sil.org/OFL">https://scripts.sil.org/OFL</a>&quot;. Use '<a href="https://openfontlicense.org">https://openfontlicense.org</a>' instead. [code: deprecated-ofl-url]</p>
 </span></li></ul></div></details>
 <h3>Is there kerning info for non-ligated sequences?</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/kerning_for_non_ligated_sequences</div>
@@ -363,20 +358,16 @@ definitions.</p>
 <details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>This font file does not have a 'meta' table. [code: lacks-meta-table]</p>
 </span></li></ul></div></details>
 <h2>Section: Universal</h2>
-<span class='section__emoji'>⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️</span>
+<span class='section__emoji'>⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️</span>
 <h3>Check font contains no unreachable glyphs</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/unreachable_glyphs</div>
 
 <details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
 <pre><code>- F.alt
 
-- S.001
-
 - dotlessi_ogonek
 
 - f.alt
-
-- g.001
 
 - l.alt
 
@@ -2479,29 +2470,6 @@ definitions.</p>
 </code></pre>
 <p>[code: contour-count]</p>
 </span></li></ul></div></details>
-<h3>Check math signs have the same width.</h3>
-<div class='check__idlabel'>Check ID: com.google.fonts/check/math_signs_width</div>
-
-<details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 545 among a set of 3 math glyphs.
-The following math glyphs have a different width, though:</p>
-<p>Width = 499:
-less, plus</p>
-<p>Width = 486:
-greater</p>
-<p>Width = 413:
-logicalnot</p>
-<p>Width = 586:
-plusminus</p>
-<p>Width = 460:
-multiply</p>
-<p>Width = 555:
-divide</p>
-<p>Width = 600:
-greaterequal, minus</p>
-<p>Width = 577:
-lessequal
-[code: width-outliers]</p>
-</span></li></ul></div></details>
 <h3>Check accent of Lcaron, dcaron, lcaron, tcaron (derived from com.google.fonts/check/alt_caron)</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/alt_caron</div>
 
@@ -2535,7 +2503,7 @@ lessequal
 
 * infinity (U+221E): L&lt;&lt;699.0,152.0&gt;--&lt;700.0,184.0&gt;&gt; -&gt; L&lt;&lt;700.0,184.0&gt;--&lt;703.0,249.0&gt;&gt;
 
-* notequal (U+2260): L&lt;&lt;79.0,393.0&gt;--&lt;108.0,392.0&gt;&gt; -&gt; L&lt;&lt;108.0,392.0&gt;--&lt;137.0,392.0&gt;&gt;
+* notequal (U+2260): L&lt;&lt;74.0,393.0&gt;--&lt;101.0,392.0&gt;&gt; -&gt; L&lt;&lt;101.0,392.0&gt;--&lt;127.0,392.0&gt;&gt;
 
 * ordmasculine (U+00BA): L&lt;&lt;31.0,476.0&gt;--&lt;34.0,523.0&gt;&gt; -&gt; L&lt;&lt;34.0,523.0&gt;--&lt;30.0,686.0&gt;&gt;
 
@@ -2632,7 +2600,7 @@ lessequal
 
 * copyright (U+00A9): B&lt;&lt;344.0,204.0&gt;-&lt;345.0,204.0&gt;-&lt;340.0,205.0&gt;&gt;/L&lt;&lt;340.0,205.0&gt;--&lt;344.0,204.0&gt;&gt; = 2.726310993906212
 
-* notequal (U+2260): L&lt;&lt;172.0,184.0&gt;--&lt;192.0,210.0&gt;&gt;/B&lt;&lt;192.0,210.0&gt;-&lt;186.0,203.0&gt;-&lt;196.5,216.5&gt;&gt; = 3.032702616176968
+* notequal (U+2260): L&lt;&lt;159.0,184.0&gt;--&lt;177.0,210.0&gt;&gt;/B&lt;&lt;177.0,210.0&gt;-&lt;172.0,203.0&gt;-&lt;181.0,216.5&gt;&gt; = 0.8425242607405454
 
 * uni20B9 (U+20B9): L&lt;&lt;318.0,476.0&gt;--&lt;318.0,476.0&gt;&gt;/L&lt;&lt;318.0,476.0&gt;--&lt;314.0,477.0&gt;&gt; = 14.036243467926484
 
@@ -3063,8 +3031,8 @@ lessequal
 
 <details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies <em>must</em> disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ ị̀ ị́ ị̂ ị̃ ị̄</p>
 <p>The dot of soft dotted characters <em>should</em> disappear in other cases, for example: i᷄ i᷅ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̥᷄ i̥᷅ i̥᷆ i̥᷇ ĭ̦ i̦̇ i̦̊ i̦̋ i̦̍ i̦̐ i̦̒ i̦̓ i̦᷄ i̦᷅</p>
-<p>Your font fully covers the following languages that require the soft-dotted feature: Bete-Bendi (Latn, 100,000 speakers), Ma’di (Latn, 584,000 speakers), Navajo (Latn, 166,319 speakers), Dutch (Latn, 31,709,104 speakers), Igbo (Latn, 27,823,640 speakers), Ijo, Southeast (Latn, 2,471,000 speakers), Ekpeye (Latn, 226,000 speakers), Ebira (Latn, 2,200,000 speakers), Lugbara (Latn, 2,200,000 speakers), Southern Kisi (Latn, 360,000 speakers), Fur (Latn, 1,230,163 speakers), Nzakara (Latn, 50,000 speakers), Lithuanian (Latn, 2,357,094 speakers), Avokaya (Latn, 100,000 speakers), Cicipu (Latn, 44,000 speakers), Zapotec (Latn, 490,000 speakers).</p>
-<p>Your font does <em>not</em> cover the following languages that require the soft-dotted feature: Gulay (Latn, 250,478 speakers), Mango (Latn, 77,000 speakers), Basaa (Latn, 332,940 speakers), Sar (Latn, 500,000 speakers), Dan (Latn, 1,099,244 speakers), Yala (Latn, 200,000 speakers), South Central Banda (Latn, 244,000 speakers), Mundani (Latn, 34,000 speakers), Dii (Latn, 71,000 speakers), Makaa (Latn, 221,000 speakers), Nateni (Latn, 100,000 speakers), Ukrainian (Cyrl, 29,273,587 speakers), Koonzime (Latn, 40,000 speakers), Kpelle, Guinea (Latn, 622,000 speakers), Bafut (Latn, 158,146 speakers), Belarusian (Cyrl, 10,064,517 speakers), Mfumte (Latn, 79,000 speakers), Kom (Latn, 360,685 speakers), Aghem (Latn, 38,843 speakers), Ngbaka (Latn, 1,020,000 speakers), Ejagham (Latn, 120,000 speakers). [code: soft-dotted]</p>
+<p>Your font fully covers the following languages that require the soft-dotted feature: Cicipu (Latn, 44,000 speakers), Dutch (Latn, 31,709,104 speakers), Fur (Latn, 1,230,163 speakers), Ebira (Latn, 2,200,000 speakers), Igbo (Latn, 27,823,640 speakers), Southern Kisi (Latn, 360,000 speakers), Lugbara (Latn, 2,200,000 speakers), Ma’di (Latn, 584,000 speakers), Ekpeye (Latn, 226,000 speakers), Ijo, Southeast (Latn, 2,471,000 speakers), Lithuanian (Latn, 2,357,094 speakers), Bete-Bendi (Latn, 100,000 speakers), Navajo (Latn, 166,319 speakers), Avokaya (Latn, 100,000 speakers), Nzakara (Latn, 50,000 speakers), Zapotec (Latn, 490,000 speakers).</p>
+<p>Your font does <em>not</em> cover the following languages that require the soft-dotted feature: Belarusian (Cyrl, 10,064,517 speakers), Mango (Latn, 77,000 speakers), Mundani (Latn, 34,000 speakers), Basaa (Latn, 332,940 speakers), Ejagham (Latn, 120,000 speakers), Ngbaka (Latn, 1,020,000 speakers), Mfumte (Latn, 79,000 speakers), Aghem (Latn, 38,843 speakers), Dan (Latn, 1,099,244 speakers), Koonzime (Latn, 40,000 speakers), South Central Banda (Latn, 244,000 speakers), Gulay (Latn, 250,478 speakers), Kom (Latn, 360,685 speakers), Yala (Latn, 200,000 speakers), Ukrainian (Cyrl, 29,273,587 speakers), Dii (Latn, 71,000 speakers), Nateni (Latn, 100,000 speakers), Makaa (Latn, 221,000 speakers), Sar (Latn, 500,000 speakers), Bafut (Latn, 158,146 speakers), Kpelle, Guinea (Latn, 622,000 speakers). [code: soft-dotted]</p>
 </span></li></ul></div></details>
                         </main>
                     </body>
