deploy: aefeead9c8f02948bb5fc942ecea38a523365353

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -128,18 +128,18 @@ ul {
                 <th>✅ PASS</th>
             </tr>
             <tr>
+                <td>1</td>
                 <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>12</td>
+                <td>1</td>
+                <td>11</td>
                 <td>123</td>
                 <td>7</td>
-                <td>114</td>
+                <td>113</td>
             </tr>
             <tr>
+                <td>1%</td>
                 <td>0%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td>1%</td>
                 <td>6%</td>
                 <td>65%</td>
                 <td>4%</td>
@@ -171,11 +171,11 @@ ul {
     <p>FontBakery version: 0.10.9</p>
     
 <h2>Section: Google Fonts</h2>
-<span class='section__emoji'>⚠️⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</span>
+<span class='section__emoji'>💥🔥⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</span>
 <h3>Checking OS/2 achVendID.</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/vendor_id</div>
 
-<details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>OS/2 VendorID value 'NONE' is not yet recognized. If you registered it recently, then it's safe to ignore this warning message. Otherwise, you should set it to your own unique 4 character code, and register it with Microsoft at <a href="https://www.microsoft.com/typography/links/vendorlist.aspx">https://www.microsoft.com/typography/links/vendorlist.aspx</a>
+<details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>OS/2 VendorID value 'BM86' is not yet recognized. If you registered it recently, then it's safe to ignore this warning message. Otherwise, you should set it to your own unique 4 character code, and register it with Microsoft at <a href="https://www.microsoft.com/typography/links/vendorlist.aspx">https://www.microsoft.com/typography/links/vendorlist.aspx</a>
 [code: unknown]</p>
 </span></li></ul></div></details>
 <h3>Check for codepoints not covered by METADATA subsets.</h3>
@@ -194,7 +194,7 @@ definitions.</p>
 <li>U+02BE MODIFIER LETTER RIGHT HALF RING: not included in any glyphset definition</li>
 <li>U+02BF MODIFIER LETTER LEFT HALF RING: not included in any glyphset definition</li>
 <li>U+02C0 MODIFIER LETTER GLOTTAL STOP: not included in any glyphset definition</li>
-<li>U+02C7 CARON: try adding one of: canadian-aboriginal, tifinagh, yi</li>
+<li>U+02C7 CARON: try adding one of: canadian-aboriginal, yi, tifinagh</li>
 <li>U+02C8 MODIFIER LETTER VERTICAL LINE: not included in any glyphset definition</li>
 <li>U+02CA MODIFIER LETTER ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+02CB MODIFIER LETTER GRAVE ACCENT: not included in any glyphset definition</li>
@@ -204,9 +204,9 @@ definitions.</p>
 <li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
 <li>U+02EE MODIFIER LETTER DOUBLE APOSTROPHE: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: math, coptic, tifinagh, cherokee</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, math, cherokee</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: math, tifinagh, tai-le, old-permic, canadian-aboriginal, malayalam, coptic, syriac</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: math, tifinagh, coptic, tai-le, malayalam, old-permic, syriac, canadian-aboriginal</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
@@ -224,13 +224,13 @@ definitions.</p>
 <li>U+0328 COMBINING OGONEK: not included in any glyphset definition</li>
 <li>U+032D COMBINING CIRCUMFLEX ACCENT BELOW: try adding syriac</li>
 <li>U+032F COMBINING INVERTED BREVE BELOW: not included in any glyphset definition</li>
-<li>U+0330 COMBINING TILDE BELOW: try adding one of: math, syriac, cherokee</li>
-<li>U+0331 COMBINING MACRON BELOW: try adding one of: tifinagh, gothic, syriac, caucasian-albanian, cherokee</li>
+<li>U+0330 COMBINING TILDE BELOW: try adding one of: syriac, math, cherokee</li>
+<li>U+0331 COMBINING MACRON BELOW: try adding one of: cherokee, gothic, tifinagh, caucasian-albanian, syriac</li>
 <li>U+0332 COMBINING LOW LINE: not included in any glyphset definition</li>
 <li>U+0334 COMBINING TILDE OVERLAY: not included in any glyphset definition</li>
 <li>U+0335 COMBINING SHORT STROKE OVERLAY: not included in any glyphset definition</li>
 <li>U+0358 COMBINING DOT ABOVE RIGHT: try adding osage</li>
-<li>U+03A9 GREEK CAPITAL LETTER OMEGA: try adding one of: elbasan, math, greek</li>
+<li>U+03A9 GREEK CAPITAL LETTER OMEGA: try adding one of: math, elbasan, greek</li>
 <li>U+03BB GREEK SMALL LETTER LAMDA: try adding one of: math, greek</li>
 <li>U+03C0 GREEK SMALL LETTER PI: try adding one of: yi, math, greek</li>
 <li>U+03C7 GREEK SMALL LETTER CHI: try adding one of: math, greek</li>
@@ -274,14 +274,14 @@ definitions.</p>
 <li>U+215C VULGAR FRACTION THREE EIGHTHS: not included in any glyphset definition</li>
 <li>U+215D VULGAR FRACTION FIVE EIGHTHS: not included in any glyphset definition</li>
 <li>U+215E VULGAR FRACTION SEVEN EIGHTHS: not included in any glyphset definition</li>
-<li>U+2190 LEFTWARDS ARROW: try adding one of: math, symbols</li>
-<li>U+2192 RIGHTWARDS ARROW: try adding one of: math, symbols</li>
-<li>U+2194 LEFT RIGHT ARROW: try adding one of: math, symbols, emoji</li>
-<li>U+2195 UP DOWN ARROW: try adding one of: math, symbols, emoji</li>
-<li>U+2196 NORTH WEST ARROW: try adding one of: math, symbols, emoji</li>
-<li>U+2197 NORTH EAST ARROW: try adding one of: math, symbols, emoji</li>
-<li>U+2198 SOUTH EAST ARROW: try adding one of: math, symbols, emoji</li>
-<li>U+2199 SOUTH WEST ARROW: try adding one of: math, symbols, emoji</li>
+<li>U+2190 LEFTWARDS ARROW: try adding one of: symbols, math</li>
+<li>U+2192 RIGHTWARDS ARROW: try adding one of: symbols, math</li>
+<li>U+2194 LEFT RIGHT ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2195 UP DOWN ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2196 NORTH WEST ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2197 NORTH EAST ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2198 SOUTH EAST ARROW: try adding one of: symbols, emoji, math</li>
+<li>U+2199 SOUTH WEST ARROW: try adding one of: symbols, emoji, math</li>
 <li>U+2202 PARTIAL DIFFERENTIAL: try adding math</li>
 <li>U+2205 EMPTY SET: try adding math</li>
 <li>U+2206 INCREMENT: try adding math</li>
@@ -299,26 +299,26 @@ definitions.</p>
 <li>U+25AA BLACK SMALL SQUARE: try adding one of: symbols, emoji</li>
 <li>U+25AB WHITE SMALL SQUARE: try adding one of: symbols, emoji</li>
 <li>U+25B2 BLACK UP-POINTING TRIANGLE: try adding symbols</li>
-<li>U+25B3 WHITE UP-POINTING TRIANGLE: try adding one of: math, symbols</li>
+<li>U+25B3 WHITE UP-POINTING TRIANGLE: try adding one of: symbols, math</li>
 <li>U+25B4 BLACK UP-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25B5 WHITE UP-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25B6 BLACK RIGHT-POINTING TRIANGLE: try adding one of: symbols, emoji</li>
-<li>U+25B7 WHITE RIGHT-POINTING TRIANGLE: try adding one of: math, symbols</li>
+<li>U+25B7 WHITE RIGHT-POINTING TRIANGLE: try adding one of: symbols, math</li>
 <li>U+25B8 BLACK RIGHT-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25B9 WHITE RIGHT-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25BC BLACK DOWN-POINTING TRIANGLE: try adding symbols</li>
-<li>U+25BD WHITE DOWN-POINTING TRIANGLE: try adding one of: math, symbols</li>
+<li>U+25BD WHITE DOWN-POINTING TRIANGLE: try adding one of: symbols, math</li>
 <li>U+25BE BLACK DOWN-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25BF WHITE DOWN-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25C0 BLACK LEFT-POINTING TRIANGLE: try adding one of: symbols, emoji</li>
-<li>U+25C1 WHITE LEFT-POINTING TRIANGLE: try adding one of: math, symbols</li>
+<li>U+25C1 WHITE LEFT-POINTING TRIANGLE: try adding one of: symbols, math</li>
 <li>U+25C2 BLACK LEFT-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25C3 WHITE LEFT-POINTING SMALL TRIANGLE: try adding symbols</li>
 <li>U+25C6 BLACK DIAMOND: try adding symbols</li>
 <li>U+25C7 WHITE DIAMOND: try adding symbols</li>
-<li>U+25CA LOZENGE: try adding one of: math, symbols</li>
+<li>U+25CA LOZENGE: try adding one of: symbols, math</li>
 <li>U+25CB WHITE CIRCLE: try adding symbols</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: kayah-li, hanifi-rohingya, newa, duployan, kannada, math, tai-viet, bhaiksuki, yi, symbols, khojki, gunjala-gondi, mahajani, kaithi, sharada, tai-le, ahom, new-tai-lue, adlam, thai, bassa-vah, miao, syloti-nagri, manichaean, gujarati, malayalam, caucasian-albanian, chakma, hanunoo, gurmukhi, khudawadi, buginese, sundanese, dogra, meetei-mayek, brahmi, tamil, old-permic, batak, kharoshthi, myanmar, khmer, coptic, devanagari, javanese, pahawh-hmong, bengali, tibetan, buhid, syriac, zanabazar-square, thaana, lepcha, phags-pa, takri, siddham, telugu, mandaic, elbasan, limbu, modi, wancho, hebrew, rejang, lao, osage, tagbanwa, oriya, masaram-gondi, mende-kikakui, mongolian, tifinagh, balinese, grantha, music, tirhuta, sogdian, psalter-pahlavi, cham, soyombo, sinhala, marchen, nko, tagalog</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: tamil, myanmar, batak, javanese, gunjala-gondi, sundanese, tagalog, sinhala, caucasian-albanian, symbols, masaram-gondi, tagbanwa, sharada, gujarati, sogdian, mahajani, tai-viet, cham, bengali, ahom, limbu, soyombo, kharoshthi, pahawh-hmong, khmer, devanagari, mandaic, psalter-pahlavi, osage, newa, kaithi, miao, dogra, lepcha, telugu, buhid, yi, kannada, tirhuta, meetei-mayek, phags-pa, tibetan, zanabazar-square, khudawadi, hebrew, brahmi, tai-le, hanifi-rohingya, mende-kikakui, chakma, bhaiksuki, math, tifinagh, grantha, oriya, music, malayalam, rejang, marchen, new-tai-lue, nko, syloti-nagri, khojki, wancho, coptic, siddham, lao, hanunoo, thai, kayah-li, gurmukhi, duployan, adlam, syriac, buginese, balinese, takri, modi, thaana, manichaean, bassa-vah, mongolian, elbasan, old-permic</li>
 <li>U+25CF BLACK CIRCLE: try adding symbols</li>
 <li>U+25E6 WHITE BULLET: try adding symbols</li>
 <li>U+27E8 MATHEMATICAL LEFT ANGLE BRACKET: try adding math</li>
@@ -329,6 +329,28 @@ definitions.</p>
 <li>U+1FA9D HOOK: try adding one of: symbols, emoji</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>cyrillic-ext</code>, <code>latin</code>, <code>latin-ext</code>, <code>vietnamese</code> [code: unreachable-subsetting]</p>
+</span></li></ul></div></details>
+<h3>Copyright notices match canonical pattern in fonts</h3>
+<div class='check__idlabel'>Check ID: com.google.fonts/check/font_copyright</div>
+
+<details><summary>🔥 SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Name Table entry: Copyright notices should match a pattern similar to: &quot;Copyright 2019 The Familyname Project Authors (git url)&quot;
+But instead we have got:
+&quot;Copyright 2024 Sankofa Display Authors (<a href="https://github.com/batsimadz/Sankofa-Display">https://github.com/batsimadz/Sankofa-Display</a>)&quot; [code: bad-notice-format]</p>
+</span></li></ul></div></details>
+<h3>Familyname must be unique according to namecheck.fontdata.com</h3>
+<div class='check__idlabel'>Check ID: com.google.fonts/check/fontdata_namecheck</div>
+
+<details><summary>💥 SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>Failed to access: <a href="http://namecheck.fontdata.com">http://namecheck.fontdata.com</a>.
+This check relies on the external service <a href="http://namecheck.fontdata.com">http://namecheck.fontdata.com</a> via the internet. While the service cannot be reached or does not respond this check is broken.</p>
+<pre><code>	You can exclude this check with the command line option:
+	-x com.google.fonts/check/fontdata_namecheck
+
+	Or you can wait until the service is available again.
+	If the problem persists please report this issue at: https://github.com/fonttools/fontbakery/issues
+
+	Original error message:
+	&lt;class 'requests.exceptions.ConnectionError'&gt; [code: namecheck-service]
+</code></pre>
 </span></li></ul></div></details>
 <h3>Is there kerning info for non-ligated sequences?</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/kerning_for_non_ligated_sequences</div>
@@ -347,11 +369,6 @@ definitions.</p>
 - i + l [code: lacks-kern-info]
 </code></pre>
 </span></li></ul></div></details>
-<h3>Name table strings must not contain the string 'Reserved Font Name'.</h3>
-<div class='check__idlabel'>Check ID: com.google.fonts/check/name/rfn</div>
-
-<details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Name table entry contains &quot;Reserved Font Name&quot; for a family name (&quot;Sankofa Display&quot;) that differs from the currently used family name (SankofaDisplay), which is fine. [code: legacy-familyname]</p>
-</span></li></ul></div></details>
 <h3>Ensure fonts have ScriptLangTags declared on the 'meta' table.</h3>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/meta/script_lang_tags</div>
 
@@ -363,19 +380,7 @@ definitions.</p>
 <div class='check__idlabel'>Check ID: com.google.fonts/check/unreachable_glyphs</div>
 
 <details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- F.alt
-
-- dotlessi_ogonek
-
-- f.alt
-
-- l.alt
-
-- q.alt
-
-- t.alt
-
-- y.alt
+<pre><code>- dotlessi_ogonek
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
@@ -3031,8 +3036,8 @@ definitions.</p>
 
 <details><summary>⚠️ SankofaDisplay-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies <em>must</em> disappear in the following strings: i᷆ i᷇ į̀ į́ į̂ į̃ į̄ į̌ ɨ̀ ɨ́ ɨ̂ ɨ̃ ɨ̄ ɨ̈ ɨ̋ ɨ̌ ɨ̏ ɨ̧̀ ɨ̧́ ɨ̧̂ ɨ̧̌ ɨ̱̀ ɨ̱́ ɨ̱̈ ị̀ ị́ ị̂ ị̃ ị̄</p>
 <p>The dot of soft dotted characters <em>should</em> disappear in other cases, for example: i᷄ i᷅ i̛᷄ i̛᷅ i̛᷆ i̛᷇ i̥᷄ i̥᷅ i̥᷆ i̥᷇ ĭ̦ i̦̇ i̦̊ i̦̋ i̦̍ i̦̐ i̦̒ i̦̓ i̦᷄ i̦᷅</p>
-<p>Your font fully covers the following languages that require the soft-dotted feature: Ijo, Southeast (Latn, 2,471,000 speakers), Cicipu (Latn, 44,000 speakers), Ma’di (Latn, 584,000 speakers), Southern Kisi (Latn, 360,000 speakers), Zapotec (Latn, 490,000 speakers), Fur (Latn, 1,230,163 speakers), Nzakara (Latn, 50,000 speakers), Avokaya (Latn, 100,000 speakers), Dutch (Latn, 31,709,104 speakers), Ekpeye (Latn, 226,000 speakers), Lithuanian (Latn, 2,357,094 speakers), Lugbara (Latn, 2,200,000 speakers), Navajo (Latn, 166,319 speakers), Bete-Bendi (Latn, 100,000 speakers), Igbo (Latn, 27,823,640 speakers), Ebira (Latn, 2,200,000 speakers).</p>
-<p>Your font does <em>not</em> cover the following languages that require the soft-dotted feature: Kpelle, Guinea (Latn, 622,000 speakers), Kom (Latn, 360,685 speakers), Mfumte (Latn, 79,000 speakers), Aghem (Latn, 38,843 speakers), Ngbaka (Latn, 1,020,000 speakers), Belarusian (Cyrl, 10,064,517 speakers), Dan (Latn, 1,099,244 speakers), Basaa (Latn, 332,940 speakers), Koonzime (Latn, 40,000 speakers), Makaa (Latn, 221,000 speakers), Mundani (Latn, 34,000 speakers), Ukrainian (Cyrl, 29,273,587 speakers), South Central Banda (Latn, 244,000 speakers), Bafut (Latn, 158,146 speakers), Dii (Latn, 71,000 speakers), Gulay (Latn, 250,478 speakers), Ejagham (Latn, 120,000 speakers), Mango (Latn, 77,000 speakers), Yala (Latn, 200,000 speakers), Sar (Latn, 500,000 speakers), Nateni (Latn, 100,000 speakers). [code: soft-dotted]</p>
+<p>Your font fully covers the following languages that require the soft-dotted feature: Ekpeye (Latn, 226,000 speakers), Igbo (Latn, 27,823,640 speakers), Cicipu (Latn, 44,000 speakers), Zapotec (Latn, 490,000 speakers), Dutch (Latn, 31,709,104 speakers), Ijo, Southeast (Latn, 2,471,000 speakers), Southern Kisi (Latn, 360,000 speakers), Lithuanian (Latn, 2,357,094 speakers), Fur (Latn, 1,230,163 speakers), Ebira (Latn, 2,200,000 speakers), Avokaya (Latn, 100,000 speakers), Nzakara (Latn, 50,000 speakers), Bete-Bendi (Latn, 100,000 speakers), Lugbara (Latn, 2,200,000 speakers), Navajo (Latn, 166,319 speakers), Ma’di (Latn, 584,000 speakers).</p>
+<p>Your font does <em>not</em> cover the following languages that require the soft-dotted feature: Ejagham (Latn, 120,000 speakers), Dii (Latn, 71,000 speakers), Yala (Latn, 200,000 speakers), Kom (Latn, 360,685 speakers), Kpelle, Guinea (Latn, 622,000 speakers), Belarusian (Cyrl, 10,064,517 speakers), Mfumte (Latn, 79,000 speakers), Mango (Latn, 77,000 speakers), Sar (Latn, 500,000 speakers), Mundani (Latn, 34,000 speakers), Ngbaka (Latn, 1,020,000 speakers), Gulay (Latn, 250,478 speakers), Makaa (Latn, 221,000 speakers), South Central Banda (Latn, 244,000 speakers), Basaa (Latn, 332,940 speakers), Aghem (Latn, 38,843 speakers), Nateni (Latn, 100,000 speakers), Ukrainian (Cyrl, 29,273,587 speakers), Dan (Latn, 1,099,244 speakers), Koonzime (Latn, 40,000 speakers), Bafut (Latn, 158,146 speakers). [code: soft-dotted]</p>
 </span></li></ul></div></details>
                         </main>
                     </body>
